using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class TagManager
{
    public const string IsJumping = "IsJumping";
    public const string JumpMultiplier = "JumpMultiplier";
    public const string StartGameTrigger = "StartGameTrigger";
    public const string DieTrigger = "Die";
    public const string IsRolling = "IsRolling";
    public const string RollMultiplier = "RollMultiplier";
}
